--- a/image_storage/templates/dashboard/_sidebar.html
+++ b/image_storage/templates/dashboard/_sidebar.html
@@ -1,4 +1,4 @@
-<div class="border-right bg-white" id="sidebar-wrapper">
+<div class="border-right bg-white col-sm-12 col-lg-3 col-xl-2" id="sidebar-wrapper">
     <div class="list-group sidebar-heading border-bottom bg-light">
         Start Bootstrap
     </div>
