--- a/image_storage/templates/dashboard/index.html
+++ b/image_storage/templates/dashboard/index.html
@@ -3,21 +3,13 @@
 
 {% block content %} 
 <body>
-    <div class="d-flex" id="wrapper">
+    <div class="d-flex row">
         {% include 'dashboard/_sidebar.html' %}
-        <div id="page-content-wrapper">
+        <div id="content-wrapper" class="col-sm">
             {% include 'dashboard/_navbar.html' %}
             <!-- Page content-->
             <div class="container-fluid">
                 <h1 class="mt-4">Simple Sidebar</h1>
-                <p>The starting state of the menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will change.</p>
-                <p>
-                    Make sure to keep all page content within the
-                    <code>#page-content-wrapper</code>
-                    . The top navbar is optional, and just for demonstration. Just create an element with the
-                    <code>#sidebarToggle</code>
-                    ID which will toggle the menu when clicked.
-                </p>
             </div>
         </div>
         <script src="{% static 'dashboard.js' %}"></script>
