commit before components

--- a/image_storage/templates/dashboard/index.html
+++ b/image_storage/templates/dashboard/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %} 
-<body>
+<body class="sb-sidenav-toggled">
     <div class="d-flex row">
         {% include 'dashboard/_sidebar.html' %}
         <div id="content-wrapper" class="col-sm">
