--- a/image_storage/templates/dashboard/_base.html
+++ b/image_storage/templates/dashboard/_base.html
@@ -15,6 +15,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <link rel="stylesheet" href="{% static 'dashboard.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 </head>
 {% block content %} {% endblock %}
 </html>
