--- a/image_storage/templates/dashboard/_navbar.html
+++ b/image_storage/templates/dashboard/_navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
     <div class="container-fluid justify-content-between">
-        <button class="navbar-toggler" id="sidebarToggle"  type="button"><span class="navbar-toggler-icon"></span></button>
+        <i id="sidebarToggle" class="bi bi-arrow-bar-left"></i>
         <p> Profil </p>
     </div>
 </nav>
