--- a/image_storage/templates/dashboard/index.html
+++ b/image_storage/templates/dashboard/index.html
@@ -1,16 +1,85 @@
 {% extends 'dashboard/_base.html' %}
 {% load static %}
 
-{% block content %} 
+{% block css %}
+    <link rel="stylesheet" href="{% static "dashboard.css" %}">
+{% endblock %}
+{% block _content %} 
+<body>
+    <div class="d-flex w-100">
+
+        <!-- Sidebar-->
+        <nav id="sidebar" class="min-vh-100 bg-primary">
+            <div class="sidebar-header border-bottom">
+                <h3>Bootstrap Sidebar</h3>
+            </div>
+
+            <ul class="list-unstyled components">
+                <p>Dummy Heading</p>
+                <li class="active">
+                    <a href="#homeSubmenu" data-bs-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Datensatz</a>
+                    <ul class="collapse border-bottom list-unstyled" id="homeSubmenu">
+                        <li>
+                            <a href="{% url 'dataset:list' %}">Liste</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'dataset:create' %}">Erstellen</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+
+        <!-- Page Content-->
+        <div id="content" class="position-absolute p-4">
+            <div class="container-fluid">
+                <nav class="navbar navbar-expand-lg navbar-dark bg-light justify-content-between">
+                    <button type="button" id="sidebarCollapse" class="btn btn-info">
+                        <i class="fas fa-align-left"></i>
+                        <span>Toggle Sidebar</span>
+                    </button>
+                    <!-- Example single danger button -->
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                            {{ user.username }}
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{% url 'user:logout' %}">Logout</a></li>
+                        </ul>
+                    </div>
+
+                    {% comment %} <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Link</a>
+                            </li>
+                        </ul>
+                    </div> {% endcomment %}
+                </div>
+            </nav>
+
+            <main class="container"> 
+                {% block content %} {% endblock %}
+            </main>
+            <footer>
+            </footer>
+        </div>
+    </div>
+</body>       
+<script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
 <script>
-    const URLS = {
-        DASHBOARD: "{% url 'dashboard:index' %}",
-        ABOUT: "{% url 'dashboard:about' %}",
+
+    window.onload = () => {
+        document.querySelector('#sidebarCollapse').addEventListener('click', () => {
+            document.querySelector('#sidebar').classList.toggle('active');
+            document.querySelector('#content').classList.toggle('fullsize');
+        });
     };
 </script>
-<body>
-    <div id="root">
-    </div>
-    <script src="{% static 'dashboard.js' %}"></script>
-</body>       
 {% endblock %}
