added detail view and implemented a image upload form which leads to nothing yet

--- a/image_storage/templates/dataset/list.html
+++ b/image_storage/templates/dataset/list.html
@@ -1,7 +1,10 @@
 {% extends 'dashboard/index.html' %}
+{% load static %}
 
 {% block content %}
     <br></br>
+    <div id="root"></div>
     <!-- Making datasets variable available in the DOM -->
     {{ datasets|json_script:'datasets'}}
+    <script src="{% static 'dataset.js' %}"></script>
 {% endblock %}
