--- a/image_storage/templates/dashboard/_base.html
+++ b/image_storage/templates/dashboard/_base.html
@@ -14,11 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <!-- Scrollbar Custom CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
-    <link rel="stylesheet" href="{% static 'colors.css' %}">
     <link rel="stylesheet" href="{% static 'custom_bootstrap.css' %}">
-    {% block css %} {% endblock %}
+    {% block _css %} {% endblock %}
 </head>
 {% block _content %} {% endblock %}
 </html>
