--- a/image_storage/templates/dashboard/index.html
+++ b/image_storage/templates/dashboard/index.html
@@ -1,8 +1,9 @@
 {% extends 'dashboard/_base.html' %}
 {% load static %}
 
-{% block css %}
+{% block _css %}
     <link rel="stylesheet" href="{% static "dashboard.css" %}">
+    {% block css %} {% endblock %}
 {% endblock %}
 {% block _content %} 
 <body>
@@ -17,6 +18,7 @@
             <ul class="list-unstyled components">
                 <p>Dummy Heading</p>
                 <li class="active">
+                    <a href="{% url 'dashboard:index' %}"> Dashboard </a>
                     <a href="#homeSubmenu" data-bs-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Datensatz</a>
                     <ul class="collapse border-bottom list-unstyled" id="homeSubmenu">
                         <li>
@@ -31,7 +33,7 @@
         </nav>
 
         <!-- Page Content-->
-        <div id="content" class="position-absolute p-4">
+        <div id="content" class="position-absolute bg-light p-4">
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg navbar-dark bg-light justify-content-between">
                     <button type="button" id="sidebarCollapse" class="btn btn-info">
@@ -64,17 +66,16 @@
                 </div>
             </nav>
 
-            <main class="container"> 
+            <main class="container-fluid"> 
                 {% block content %} {% endblock %}
             </main>
             <footer>
             </footer>
         </div>
     </div>
-</body>       
-<script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
+</body>
+{% block javascript %}{% endblock %}       
 <script>
-
     window.onload = () => {
         document.querySelector('#sidebarCollapse').addEventListener('click', () => {
             document.querySelector('#sidebar').classList.toggle('active');
