--- a/image_storage/templates/dashboard/index.html
+++ b/image_storage/templates/dashboard/index.html
@@ -1,6 +1,6 @@
 {% extends 'dashboard/_base.html' %}
 {% load static %}
-
+{% load django_bootstrap5 %}
 {% block _css %}
     <link rel="stylesheet" href="{% static "dashboard.css" %}">
     {% block css %} {% endblock %}
@@ -34,6 +34,8 @@
 
         <!-- Page Content-->
         <div id="content" class="position-absolute bg-light p-4">
+{% bootstrap_messages %}
+
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg navbar-dark bg-light justify-content-between">
                     <button type="button" id="sidebarCollapse" class="btn btn-info">
