--- a/image_storage/templates/dashboard/index.html
+++ b/image_storage/templates/dashboard/index.html
@@ -76,7 +76,9 @@
         </div>
     </div>
 </body>
-{% block javascript %}{% endblock %}       
+<script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
+{% block javascript %}
+{% endblock %}       
 <script>
     window.onload = () => {
         document.querySelector('#sidebarCollapse').addEventListener('click', () => {
