removed react from dataset detail and included alpine js in base

--- a/image_storage/templates/_base.html
+++ b/image_storage/templates/_base.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'custom_bootstrap.css' %}">
     {% block _css %} {% endblock %}
+    <script src="//unpkg.com/alpinejs" defer></script>
 </head>
 {% block _content %} {% endblock %}
 </html>
