splitted datasets into multiple apps

--- a/image_storage/templates/dashboard/index.html
+++ b/image_storage/templates/dashboard/index.html
@@ -22,10 +22,10 @@
                     <a href="#homeSubmenu" data-bs-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Datensatz</a>
                     <ul class="collapse border-bottom list-unstyled" id="homeSubmenu">
                         <li>
-                            <a href="{% url 'dataset:list' %}">Liste</a>
+                            <a href="{% url 'datasets:list' %}">Liste</a>
                         </li>
                         <li>
-                            <a href="{% url 'dataset:create' %}">Erstellen</a>
+                            <a href="{% url 'datasets:create' %}">Erstellen</a>
                         </li>
                     </ul>
                 </li>
