implmented upload of annotation files and alot more

--- a/image_storage/datasets/templates/transactions/htmx/table.html
+++ b/image_storage/datasets/templates/transactions/htmx/table.html
@@ -1,5 +1,5 @@
 {% load django_tables2 %}
-<div id="image" class="tab-pane fade show active" role="tabpanel" aria-labelledby="image-tab">  
+<div id="image-transaction" class="tab-pane fade show active" role="tabpanel" aria-labelledby="image-transaction-tab">  
     {% render_table table %}
 
     <ul class="pagination justify-content-center">
